# AutonomousSystem

./: .gitignore  .gitmodules  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
dlmodels/: testyolov8.py
docker/: Dockerfile  Dockerfile.ros2  Dockerfile.ros2humble  Dockerfile.triton  Dockerfile.ubuntu22cu117  build-image.sh  dockerreadme.md  requirements.txt  ros_entrypoint.sh  ubuntu22ros2_entrypoint.sh
scripts/: mybuildros2.sh  roscommand.sh  runcontainer.sh  runcontainer_ubuntu22cuda117.sh  workspace-entrypoint.sh
sensors/: testcv2.py  testopen3d.py
src/cpp_parameters/: CMakeLists.txt  package.xml
src/cpp_parameters/launch/: cpp_parameters_launch.py
src/cpp_parameters/src/: cpp_parameters_node.cpp
src/my_interfaces/: CMakeLists.txt  package.xml
src/mycpackage/: CMakeLists.txt  package.xml
src/mycpackage/src/: mycnode.cpp  mysubscribenode.cpp
src/mypypackage/: package.xml  setup.cfg  setup.py
src/mypypackage/launch/: mypypackage_launch.py
src/yolopyinference/: package.xml  setup.cfg  setup.py
src/yolopyinference/config/: decoder_params.yaml  params.yaml  trt_params.yaml
src/yolopyinference/launch/: trtdetect_launch.py  visualization_launch.py  yolotensorrtlaunch.py
src/yolopyinference/yolopyinference_ros/: ImagePubNode.py  TRTBackend.py  YoloDecoder.py  YoloUtils.py  trtdetect.py  visualization.py
src/yolopyinference/yolopyinference_ros/utils/: PlotUtils.py  YoloUtils.py
