<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolopyinference_ros</name>
  <version>0.0.0</version>
  <description>ROS Inference test</description>
  <maintainer email="kaikai.liu@sjsu.edu">admin</maintainer>
  <license>TODO: License declaration</license>

  <depend>isaac_ros_dnn_encoders</depend>
  <depend>isaac_ros_nitros</depend>
  <depend>isaac_ros_nitros_image_type</depend>
  <depend>isaac_ros_nitros_detection2_d_array_type</depend>
  <depend>isaac_ros_nitros_tensor_list_type</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>isaac_ros_tensor_rt</exec_depend>
  <exec_depend>isaac_ros_triton</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_filters</exec_depend>

  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
